fixed BUG - Can't save Google account settings

--- a/i18n/Estonian.ini
+++ b/i18n/Estonian.ini
@@ -4,6 +4,7 @@ LABEL_APP_SECRET = "App secret"
 LABEL_API_KEY = "Api key"
 HEADING_SETTINGS = "Google’i autentimisega integreerimiseks vajalikud andmed"
 INFO_SETTINGS = "Selle teabe leiate Google’i juhtpaneelist."
+INFO_NO_SCOPES_AVAILABLE = "No permission options available. Modules which provide them might be disabled."
 LABEL_SETTINGS_TAB = "Google"
 INFO_CONNECTED = "Olete Google’iga ühendatud."
 INFO_NOT_CONNECTED = "Te ei ole Google’iga ühendatud."
