--- a/i18n/French.ini
+++ b/i18n/French.ini
@@ -4,6 +4,7 @@ LABEL_APP_SECRET = "App secret"
 LABEL_API_KEY = "Clé api"
 HEADING_SETTINGS = "Données requises pour l'intégration avec l'authentification Google"
 INFO_SETTINGS = "Ces informations se trouvent dans le panneau de configuration de Google."
+INFO_NO_SCOPES_AVAILABLE = "No permission options available. Modules which provide them might be disabled."
 LABEL_SETTINGS_TAB = "Google"
 INFO_CONNECTED = "Vous n'êtes pas connecté à Google"
 INFO_NOT_CONNECTED = "Vous n'êtes pas connecté à Google"
