--- a/i18n/German.ini
+++ b/i18n/German.ini
@@ -4,6 +4,7 @@ LABEL_APP_SECRET = "App Geheimnis"
 LABEL_API_KEY = "API Schlüssel"
 HEADING_SETTINGS = "Daten benötigt für Integration mit Google Authentifikation"
 INFO_SETTINGS = "Diese Information kann im Google Control Panel gefunden werden."
+INFO_NO_SCOPES_AVAILABLE = "No permission options available. Modules which provide them might be disabled."
 LABEL_SETTINGS_TAB = "Google"
 INFO_CONNECTED = "Sie sind mit Google verbunden"
 INFO_NOT_CONNECTED = "Sie sind nicht mit Google verbunden"
