--- a/i18n/Russian.ini
+++ b/i18n/Russian.ini
@@ -3,7 +3,8 @@ LABEL_APP_ID = "ID приложения"
 LABEL_APP_SECRET = "Секретный ключ"
 LABEL_API_KEY = "Ключ Api"
 HEADING_SETTINGS = "Данные, необходимые для интеграции с аутентификацией Google"
-INFO_SETTINGS = "Эту информацию можно найти в панели управления Google."
+INFO_SETTINGS = "Учетные данные приложения, указанные выше, можно найти в панели управления Google."
+INFO_NO_SCOPES_AVAILABLE = "Нет доступных опций доступов. Модули, которые их предоставляют, могут быть отключены."
 LABEL_SETTINGS_TAB = "Google"
 INFO_CONNECTED = " Вы подключены к Google"
 INFO_NOT_CONNECTED = " Вы не подключены к Google"
