--- a/i18n/Spanish.ini
+++ b/i18n/Spanish.ini
@@ -4,6 +4,7 @@ LABEL_APP_SECRET = "App secret"
 LABEL_API_KEY = "Api key"
 HEADING_SETTINGS = "Datos requeridos para la integración con Google auth"
 INFO_SETTINGS = "Esta información puede obtenerse del panel de control de Google."
+INFO_NO_SCOPES_AVAILABLE = "No permission options available. Modules which provide them might be disabled."
 LABEL_SETTINGS_TAB = "Google"
 INFO_CONNECTED = "Estás conectado con Google"
 INFO_NOT_CONNECTED = "No estás conectado a Google"
