--- a/i18n/English.ini
+++ b/i18n/English.ini
@@ -3,7 +3,8 @@ LABEL_APP_ID = "App ID"
 LABEL_APP_SECRET = "App secret"
 LABEL_API_KEY = "Api key"
 HEADING_SETTINGS = "Data required for integration with Google authentication"
-INFO_SETTINGS = "This information can be found in Google control panel."
+INFO_SETTINGS = "The application credentials above can be found in Google control panel."
+INFO_NO_SCOPES_AVAILABLE = "No permission options available. Modules which provide them might be disabled."
 LABEL_SETTINGS_TAB = "Google"
 INFO_CONNECTED = "You are connected to Google"
 INFO_NOT_CONNECTED = "You are not connected to Google"
