Updated Dutch translation

--- a/i18n/Dutch.ini
+++ b/i18n/Dutch.ini
@@ -1,7 +1,7 @@
 ENABLE_MODULE = "Activeer Google"
 LABEL_APP_ID = "App ID"
-LABEL_APP_SECRET = "App secret"
-LABEL_API_KEY = "Api key"
+LABEL_APP_SECRET = "App geheim"
+LABEL_API_KEY = "Api sleutel"
 HEADING_SETTINGS = "Vereiste gegevens voor integratie met Google-verificatie"
 INFO_SETTINGS = "De bovenstaande aanmeldingsgegevens zijn te vinden in het configuratiescherm van Google."
 INFO_NO_SCOPES_AVAILABLE = "Geen toestemmingsopties beschikbaar. Modules die dit bieden zijn mogelijk uitgeschakeld."
